--- a/UltimateHackathonFramework/UltimateHackathonFramework.csproj
+++ b/UltimateHackathonFramework/UltimateHackathonFramework.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
+    <Compile Include="Games\WarGame.cs" />
     <Compile Include="Interfaces\IGame.cs" />
     <Compile Include="Interfaces\IBot.cs" />
     <Compile Include="Interfaces\IResult.cs" />
