--- a/UltimateHackathonFramework/UltimateHackathonFramework.csproj
+++ b/UltimateHackathonFramework/UltimateHackathonFramework.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\Result.cs" />
     <Compile Include="Models\Round.cs" />
     <Compile Include="Models\RoundResult.cs" />
+    <Compile Include="ViewModels\ResultsViewModel.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="ViewModels\ClientsViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
@@ -87,6 +88,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Conventions.cs" />
+    <Page Include="Views\ResultsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\GameView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\ClientsView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
