--- a/FakeBot/FakeBot.csproj
+++ b/FakeBot/FakeBot.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Communication.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomGenerator.cs" />
     <Compile Include="TTTBot.cs" />
   </ItemGroup>
   <ItemGroup>
