--- a/UltimateHackathonFramework/UltimateHackathonFramework.csproj
+++ b/UltimateHackathonFramework/UltimateHackathonFramework.csproj
@@ -73,6 +73,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppBootstrapper.cs" />
+    <Compile Include="Games\Ships.cs" />
     <Compile Include="Games\TicTacToe.cs" />
     <Compile Include="Games\WarGame.cs" />
     <Compile Include="Interfaces\IGame.cs" />
