--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ClientManagerTests.cs" />
     <Compile Include="GameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShipsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
