--- a/FakeBot/FakeBot.csproj
+++ b/FakeBot/FakeBot.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\UltimateHackathonFramework\bin\Debug\Bots\Zenon\</OutputPath>
+    <OutputPath>..\UltimateHackathonFramework\bin\Debug\Bots\Dragon\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -61,9 +61,9 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)." "$(TargetDir)..\Mietek" /S /E /Y /I
-xcopy "$(TargetDir)." "$(TargetDir)..\Krzysiu" /S /E /Y /I
-xcopy "$(TargetDir)." "$(TargetDir)..\Jamal" /S /E /Y /I</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetDir)." "$(TargetDir)..\UberBot" /S /E /Y /I
+xcopy "$(TargetDir)." "$(TargetDir)..\Terminator" /S /E /Y /I
+xcopy "$(TargetDir)." "$(TargetDir)..\WarDroid" /S /E /Y /I</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
